# mini-project

./: README.md  environment.yaml  main.py  pyproject.toml  requirements.txt  setup.py
